# ripoff-raytracer

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  gputest  render.sh  windows.bat  windows.ps1
.github/workflows/: cmake.yml
cmake/: FindOpenCL.cmake
src/: Trace.cl  clErrorCodes.hpp  image.hpp  main.cpp  math.hpp  readobj.hpp  settings.hpp
